--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+	<title>
+		<p>This is NineG</p>
+	</title>
+	<body>
+		<h2>Hello Weiwei</h2>
+		<p>I'm hosted with GitHub Pages.</p>
+	</body>
 </html>
