add jeky11 installation tutorial
add jeky11 installation tutorial

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 	<body>
 		<h2>Hello Weiwei</h2>
 		<p>I'm hosted with GitHub Pages.</p>
+		<a href="https://help.github.com/articles/using-jekyll-with-pages/"> remember to try jeky11</a>
 	</body>
 </html>
